# PQCache

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  env.yml  eval.py  parse_result.py  pyproject.toml  requirements.txt  run_llama.sh  run_mistral.sh  test_input.txt  test_latency.py  test_nah.py  vq_pred.py
GSM8k/: evaluation_gsm8k.py  gsm8k_prompt_formal.txt
InfLLM/: NOTE.md
InfLLM/benchmark/: inf_llm  pred.py  pred_longbench.py  pred_nah.py  test_latency.py
InfLLM/config/: llama-2-inf-llm-32k.yaml  llama-2-inf-llm-perhead.yaml  llama-2-inf-llm.yaml  mistral-inf-llm-perhead.yaml  mistral-inf-llm.yaml
InfLLM/inf_llm/attention/: inf_llm.py
InfLLM/scripts/: latency.sh  longbench-perhead.sh  longbench.sh  nah.sh
config/: model2maxlen.json  model2path.json
h2o_method/: h2o_attention.py  h2o_real_drop.py
tests/: __init__.py  conftest.py  test_utils.py
tools/: profile_compute.py  profile_offload.py
vq_method/: baseline_compressor.py  flash_attn_with_score.py  llama31_patch.py  llama_patch.py  mistral_patch.py  utils.py  vq.py
vq_method/retrieval_based/: cache_manager.py  global_timer.py  multi_core_compressor_v2.py  pq_search.py  retrieval_based_compressor.py  sparq.py
vq_method/retrieval_based/lfu/: CMakeLists.txt  test_file.py
vq_method/retrieval_based/lfu/include/: binding.h  lfu_cache.h
vq_method/retrieval_based/lfu/src/: lfu_cache.cc  python_api.cc
vq_method/retrieval_based/sparq_official/: README.md  utility.py
vq_method/retrieval_based/sparq_official/methods/: ann_attention.py
vq_method/retrieval_based/sparq_official/tasks/: __init__.py
vq_method/retrieval_based/tools/: model_kmeans_time.py
