[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqcache"
version = "0.1.0"
description = "Product Quantization-based KVCache for Long Context LLM Inference"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Hugo Zhang"},
    {name = "Xiaodong Ji"},
]
keywords = ["llm", "inference", "kv-cache", "product-quantization", "attention"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.43.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.5.0",
    "loguru>=0.7.0",
    "datasets>=2.21.0",
    "accelerate>=1.0.0",
    "pybind11>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
flash-attn = [
    "flash-attn>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/HugoZHL/PQCache"
Documentation = "https://github.com/HugoZHL/PQCache#readme"
Repository = "https://github.com/HugoZHL/PQCache"
Issues = "https://github.com/HugoZHL/PQCache/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["vq_method"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D107"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
